<resources>
    <string name="app_name">GymBro</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup">Signup</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create Account</string>

    <string name="user_shared_pref">UserSharedPref</string>
    <string name="user_shared_pref_username">Username</string>

    <string name="user_firebase_email">email</string>
    <string name="user_firebase_username">username</string>
    <string name="user_firebase_phone">phone</string>
    <string name="logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="no_schedules_found">No Schedules Found.</string>
    <string name="no_exercises_found">No Exercises Found.</string>

    <string name="total_exercises">Total Exercises :</string>
    <string name="working_days">Working Days:</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sun">S</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="enter_schedule_description">Enter Schedule Description</string>
    <string name="enter_schedule_name">Enter Schedule Name</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="delete">Delete</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="enter_exercise_instructions">Enter Exercise Instructions</string>
    <string name="enter_total_sets">Enter Total Sets</string>
    <string name="_0">0</string>
    <string name="kgs">KGS</string>
    <string name="complete_set">Complete Set</string>
    <string name="logs">Logs</string>
    <string name="set">Set</string>
    <string name="weight">Weight (kgs)</string>
    <string name="edit_reps">Edit Reps</string>
    <string name="edit_weight_kgs">Edit Weight (kgs)</string>
    <string name="no_logs_recorded_today">No logs recorded today</string>
    <string name="edit">Edit</string>
    <string name="description">Description:</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_instructions">Edit Instructions</string>
    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="backup_frequency">Backup Frequency</string>
    <string name="never">Never</string>
    <string name="once_per_day">Once per day</string>
    <string name="once_per_week">Once per week</string>
    <string name="backup_now">Backup Now</string>
    <string name="channel_name">backup_channel</string>
    <string name="channel_description">backup_process_notification</string>
    <string name="sync">Sync</string>
    <string name="data_settings">Data Settings</string>
    <string name="import_data">Import Data</string>
    <string name="date">Date</string>
    <string name="profile_photo">Profile Photo</string>

</resources>