<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_schedule_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:text="@string/edit_schedule"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_schedule_til_name"
            app:startIconDrawable="@drawable/baseline_person_24_black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_schedule_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_schedule_et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_schedule_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_schedule_til_description"
            app:startIconDrawable="@drawable/baseline_mail_outline_24_black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_schedule_til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_schedule_et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_schedule_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/edit_schedule_parent_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_schedule_til_description"
            app:layout_constraintStart_toStartOf="@+id/edit_schedule_til_description"
            app:layout_constraintTop_toBottomOf="@id/edit_schedule_til_description"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/edit_schedule_linear_layout_monwedfrisun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_schedule_linear_layout_tuethusat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/save_schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Save Changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_schedule_parent_linear_layout" />

        <Button
            android:id="@+id/delete_schedule_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save_schedule_button"
            app:layout_constraintStart_toStartOf="@+id/save_schedule_button"
            app:layout_constraintTop_toBottomOf="@id/save_schedule_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>